# nsrch_cli

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
captchas/: captcha_Yandex_Купить_елки_Казань.html  captcha_Yandex_биткоин_сегодня.html  captcha_Yandex_грибы_в_крыму.html  captcha_Yandex_как_решить_капчу?.html  captcha_Yandex_курс_доллара.html  captcha_Yandex_погода_москва.html  captcha_Yandex_расписание_самолетов_геленджик.html
output/: captcha_knowledge_base.csv  search_results.csv
src/: main.py
src/ai/: captcha_solver.py  manager.py
src/analysis/: analyze_captchas.py  collect_captchas.py  html_parser.py
src/browser/: browser_flow_handler.py  page_interactor.py  playwright_handler.py
src/core/: config.py  logging_setup.py
src/scraping/: http_scraper.py  search.py  search_parser.py
src/utils/: data_saver.py  helpers.py  proxy_handler.py  result_handler.py
success/: success_Yandex_what_is_altcoin.html  success_Yandex_гороскоп.html  success_Yandex_грибы_крым.html  success_Yandex_курс_биткоина.html  success_Yandex_погода_магадан.html
tests/: parser_test.py
